ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp1.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-flask
                port:
                  number: 80
    - host: myapp2.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-flask
                port:
                  number: 80
    - host: myapp3.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-flask
                port:
                  number: 80
